// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.integration.v1;

import "teleport/legacy/types/types.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/integration/v1";

// IntegrationService provides methods to manage Integrations with 3rd party APIs.
service IntegrationService {
  // ListIntegrations returns a paginated list of Integration resources.
  rpc ListIntegrations(ListIntegrationsRequest) returns (ListIntegrationsResponse);

  // GetIntegration returns the specified Integration resource.
  rpc GetIntegration(GetIntegrationRequest) returns (GetIntegrationResponse);

  // CreateIntegration creates a new Integration resource.
  rpc CreateIntegration(CreateIntegrationRequest) returns (CreateIntegrationResponse);

  // UpdateIntegration updates an existing Integration resource.
  rpc UpdateIntegration(UpdateIntegrationRequest) returns (UpdateIntegrationResponse);

  // DeleteIntegration removes the specified Integration resource.
  rpc DeleteIntegration(DeleteIntegrationRequest) returns (DeleteIntegrationResponse);

  // DeleteAllIntegrations removes all Integrations.
  rpc DeleteAllIntegrations(DeleteAllIntegrationsRequest) returns (DeleteAllIntegrationsResponse);
}

// ListIntegrationsRequest is a request for a paginated list of Integrations.
message ListIntegrationsRequest {
  // Limit is the maximum amount of resources to retrieve.
  int32 limit = 1;
  // NextKey is the key for the next page of Integrations.
  string next_key = 2;
}

// ListIntegrationsResponse a paginated list of Integrations.
message ListIntegrationsResponse {
  // Integrations is a list of Integrations.
  repeated types.IntegrationV1 integrations = 1;
  // NextKey is the key for the next page of Integrations.
  string next_key = 2;
  // TotalCount is the total number of resources available after filter, if any.
  int32 total_count = 3;
}

// GetIntegrationRequest is a request for a specific Integration resource.
message GetIntegrationRequest {
  // Name is the name of the Integration to be requested.
  string name = 1;
}

// GetIntegrationResponse is a response for reading a single Integration.
message GetIntegrationResponse {
  // Integration is the returned integration.
  types.IntegrationV1 integration = 1;
}

// CreateIntegrationRequest is the request to create the provided integration.
message CreateIntegrationRequest {
  // Integration is the integration to be created.
  types.IntegrationV1 integration = 1;
}

// CreateIntegrationResponse is the response for creating an Integration.
message CreateIntegrationResponse {}

// UpdateIntegrationRequest is the request to update the provided integration.
message UpdateIntegrationRequest {
  // Integration is the integration to be created.
  types.IntegrationV1 integration = 1;
}

// UpdateIntegrationResponse is the response for updating an Integration.
message UpdateIntegrationResponse {}

// DeleteIntegrationRequest is a request for deleting a specific Integration resource.
message DeleteIntegrationRequest {
  // Name is the name of the Integration to be deleted.
  string name = 1;
}

// DeleteIntegrationResponse is the response for deleting an integrations.
message DeleteIntegrationResponse {}

// DeleteAllIntegrationsRequest is the request for deleting all integrations.
message DeleteAllIntegrationsRequest {}

// DeleteAllIntegrationsResponse is the response for deleting all integrations.
message DeleteAllIntegrationsResponse {}
